# zonepoint

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  docker-compose.yml
.github/workflows/: pipeline.yml
FX/Phase1/: .env.example  .gitignore  README.md  feeds.txt  fx_news.py  fx_news_digest_ja.py  requirements.txt
FX/Phase2/: .env.example  README-QUICKSTART.md  app.py  gmail_ingest.py  pull_worker.py  requirements.txt  utils_vtt.py
FX/Phase3/: ClaudeCode_Prompt_Gmail_to_Discord_Phase3.md  Code.gs
FX/youtube_analyse/: analysegas.gs  fx_youtube_analyzer.gs  セットアップガイド.md  セットアップ手順_統合版.md  テスト手順・受け入れ基準_統合版.md  テスト手順書.md  変更点一覧.md  変更点一覧_統合版.md
fx-analyseai/: .env.example  Claude_Code_Prompt_FX_Company_AI.md  README.md  requirements.txt
fx-analyseai/fx_company_ai/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
fx-analyseai/scripts/: doctor.py  reset_seen.sh  run_digest.sh
fx-analyseai/src/: classify.py  ingest.py  (+5 more)
fx-discord-news/: .env.example  README.md  config.yaml  pyproject.toml
fx-discord-news/src/: __init__.py  cli.py  config.py
fx-discord-news/src/collectors/: __init__.py  economic_calendar.py  rss.py
fx-discord-news/src/delivery/: __init__.py  discord.py
fx-discord-news/src/filters/: __init__.py  rules.py
fx-discord-news/src/nlp/: __init__.py  extract.py  llm.py  prompts.py  score.py
fx-discord-news/src/scheduler/: __init__.py  jobs.py
fx-discord-news/src/utils/: __init__.py  dedup.py  lang.py  text.py
fx-discord-news/tests/: test_extract.py  test_filters.py  test_score.py
fx-youtube-insights/: .env.example  Makefile  README.md  requirements.txt
scripts/: dev-commands.sh  dev-setup.sh
(+39 files in other folders)
